<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="370dp"
        android:layout_height="194dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/camera_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="142dp"
        android:layout_height="44dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="135dp"
        android:gravity="center"
        android:text="@string/add_image"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addImage" />

    <EditText
        android:id="@+id/fullnameText"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Full name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameText" />

    <EditText
        android:id="@+id/pass1Text"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText" />

    <EditText
        android:id="@+id/pass1confirmText"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/pass_confirm"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1Text" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="370dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass1confirmText" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/button_text_border"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />
</androidx.constraintlayout.widget.ConstraintLayout>